Use Integer.valueOf() instead of constructor.  (performance issue found by findbugs)